--- a/app/src/main/res/layout/fragment_mis_citas.xml
+++ b/app/src/main/res/layout/fragment_mis_citas.xml
@@ -10,6 +10,7 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_marginHorizontal="20dp"
             android:orientation="vertical">
             <TextView
                 android:id="@+id/reslblReservarT"
