--- a/app/src/main/res/layout/item_mis_citas.xml
+++ b/app/src/main/res/layout/item_mis_citas.xml
@@ -7,16 +7,20 @@
     app:cardCornerRadius="15dp"
     app:cardUseCompatPadding="true"
     app:cardElevation="5dp">
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_margin="5dp"
         android:layout_height="wrap_content"
         android:orientation="horizontal">
+
+        <!-- Columna para Mascota y Foto -->
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_weight="5"
             android:orientation="vertical">
+
             <TextView
                 android:id="@+id/itemlblMascota"
                 android:layout_width="match_parent"
@@ -25,7 +29,10 @@
                 android:text="@string/itemlblMascota"
                 android:textColor="@color/black"
                 android:textAlignment="center"
-                android:textStyle="bold"/>
+                android:textStyle="bold"
+                android:maxLines="1"
+                android:ellipsize="end"/>
+
             <ImageView
                 android:id="@+id/itemImgFoto"
                 android:layout_width="match_parent"
@@ -34,6 +41,7 @@
                 android:src="@mipmap/ic_logo"/>
         </LinearLayout>
 
+        <!-- Columna para los títulos -->
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -68,38 +76,62 @@
                 android:text="@string/itemlblFecha"
                 android:textColor="@color/black"
                 android:textStyle="bold"/>
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginVertical="2dp"
+                android:text="@string/itemlblHora"
+                android:textColor="@color/black"
+                android:textStyle="bold"/>
         </LinearLayout>
 
-
+        <!-- Columna para los valores -->
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_weight="4"
             android:orientation="vertical">
+
             <TextView
                 android:id="@+id/itmLblServicio"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginVertical="3dp"
-                android:text="@string/itemlblServicio"/>
+                android:text="@string/itemlblServicio"
+                android:maxLines="1"
+                android:ellipsize="end"/>
             <TextView
                 android:id="@+id/itemlblVeterinario"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginVertical="2dp"
-                android:text="@string/itemlblVeterinario"/>
+                android:text="@string/itemlblVeterinario"
+                android:maxLines="1"
+                android:ellipsize="end"/>
             <TextView
                 android:id="@+id/itemlblSede"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginVertical="2dp"
-                android:text="@string/itemlblSede"/>
+                android:text="@string/itemlblSede"
+                android:maxLines="1"
+                android:ellipsize="end"/>
             <TextView
                 android:id="@+id/itemlblFecha"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginVertical="2dp"
-                android:text="@string/itemlblFecha"/>
+                android:text="@string/itemlblFecha"
+                android:maxLines="1"
+                android:ellipsize="end"/>
+            <TextView
+                android:id="@+id/itemlblHora"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginVertical="2dp"
+                android:text="@string/itemlblFecha"
+                android:maxLines="1"
+                android:ellipsize="end"/>
         </LinearLayout>
     </LinearLayout>
 </androidx.cardview.widget.CardView>
