--- a/app/src/main/res/layout/activity_sesion.xml
+++ b/app/src/main/res/layout/activity_sesion.xml
@@ -17,7 +17,8 @@
             android:layout_width="200dp"
             android:layout_height="200dp"
             android:src="@drawable/logo"
-            android:scaleType="fitCenter">
+            android:scaleType="fitCenter"
+            android:adjustViewBounds="true" >
         </ImageView>
         <TextView
             android:layout_width="match_parent"
