--- a/app/src/main/res/layout/floating_button_layout.xml
+++ b/app/src/main/res/layout/floating_button_layout.xml
@@ -7,10 +7,12 @@
         android:id="@+id/floating_button"
         android:layout_width="60dp"
         android:layout_height="60dp"
-        android:src="@drawable/ic_accessibility"
         android:background="@drawable/rounded_button"
+        android:alpha="0.8"
+        android:clickable="true"
         android:contentDescription="Botón de accesibilidad"
         android:elevation="8dp"
-        android:alpha="0.8"/>
+        android:focusable="true"
+        android:src="@drawable/ic_accessibility" />
 
 </RelativeLayout>
